# libwhill

./: .gitignore  CMakeLists.txt  LICENSE  README.md  for_curl.sh  install.sh  libwhillConfig.cmake.in  package.xml  whill.pc.in
.circleci/: build.sh  config.yml  run-build-locally.sh
